<resources>
    <string name="app_name">Thesis</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_notification">NOTIFICATION</string>
    <string name="action_accounts">ACCOUNT</string>
    <string name="action_logs">LOG</string>
    <string name="action_view_user">VIEW USERS</string>
    <string name="action_add_new_user">ADD NEW USER</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_add">ADD</string>
    <string name="action_logout">LOG OUT</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_weak_password">This password is weak</string>
    <string name="error_user_exists">Username already exist!</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_username_or_password">Username or Password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="test_string">NEW ACTIVITY</string>
    <string name="loading">Processing&#8230;</string>
    <string name="alert_gas_leak">Gas Leak</string>

    <string name="choose_account_type">Choose Account Type</string>

    <string-array name="account_type">
        <item>Admin</item>
        <item>User</item>
    </string-array>
    <string name="account_type_admin">Admin</string>
    <string name="account_type_user">User</string>

    <!--ADD NEW USER STRINGS-->
    <string name="profile_picture">Profile Picture</string>
    <string name="promptUsername"> Username</string>
    <string name="prompt_password"> Password</string>
    <string name="promptFirstname">Firstname</string>
    <string name="promptLastname">Lastname</string>
    
    <!-- MENU STRINGS-->
    <string name="menu_action">Action</string>
    <string name="menu_ignore">Ignore</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_details">Details</string>
    
    <!--LOGS STRINGS-->
    <string name="logs_indicator">Logs</string>
    
    <!--CONSOLE SWITCH STRINGS-->
    <string name="status_on">ON</string>
    <string name="status_off">OFF</string>

    <!--VIEW USER DETAILS STRINGS-->
    <string name="account_type">Account Type :</string>
    <string name="name">Name :</string>
</resources>
