<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bodyBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:gravity="center"
    tools:context="com.example.henrymatidios.wayngalan.LoginActivity">

    <RelativeLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/underlineColor"
                android:drawableStart="@drawable/ic_action_name"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/promptUsername"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:textColor="@color/textColor" />

        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/underlineColor"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/buttonColor"
        android:text="@string/action_sign_in"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_size" />
</LinearLayout>
