<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bodyBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.henrymatidios.wayngalan.LandingPage">

    <ScrollView
        android:id="@+id/landing_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/landing_page_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/accounts_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_marginTop"
                android:background="@color/buttonColor"
                android:text="@string/action_accounts"
                android:textColor="@color/textColor"
                android:textSize="@dimen/font_size" />

            <Button
                android:id="@+id/notification_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_marginTop"
                android:background="@color/buttonColor"
                android:text="@string/action_notification"
                android:textColor="@color/textColor"
                android:textSize="@dimen/font_size" />

            <Button
                android:id="@+id/logs_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_marginTop"
                android:background="@color/buttonColor"
                android:text="@string/action_logs"
                android:textColor="@color/textColor"
                android:textSize="@dimen/font_size" />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_marginTop"
                android:background="@color/buttonColor"
                android:text="@string/action_logout"
                android:textColor="@color/textColor"
                android:textSize="@dimen/font_size" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
